# pi-alarm-clock

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.cross-aarch64  PRD.md  README.md  alarms.toml  apply-loop.sh  build_pi.sh  config.toml  slice-1-manual-playbook.md
.pi/: slice0-groups.txt  todo.yml
alarm-clock/: AlarmPanel.slint  Cargo.toml  stations.json  ui.slint  ui_test.slint
alarm-clock/src/: alarm_store.rs  calendar.rs  channel.rs  config.rs  database.rs  display.rs  episode.rs  error.rs  main.rs  media.rs  qr.rs  schedule.rs  scheduler.rs  secrets.rs  seed.rs  theme.rs  weather_icons.rs  web_config.rs
alarm-clock/src/web/: mdns.rs  mod.rs  tls.rs
alarm-clock/ui/: Button.slint  Card.slint  ClockFace.slint  Media.slint  MediaPanel.slint  NavDots.slint  PanelTabs.slint  QuickControls.slint  ThemeGlobal.slint  WeatherIcon.slint
alarm-clock/web/: app.js  index.html
data/: alarm-clock.db
docs/: release-checklist.md
docs/wireframes/: index.md
docs/wireframes/dark-liquid-glass/: index.html
docs/wireframes/dark-neuromorphic/: index.html
docs/wireframes/liquid-glass/: index.html
docs/wireframes/neuromorphic/: index.html
mopidy-client/: Cargo.toml
mopidy-client/src/: lib.rs  methods.rs  state.rs  transport.rs
openspec/changes/archive/2026-07-02-slice-0-architecture-skeleton/: apply-context-manifest.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-02-slice-1-alarm-scheduling-and-episode/: tasks.md
openspec/changes/archive/2026-07-02-slice-2-advanced-alarm-features/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-03-slice-3-panels-theming-liveclock/: design.md  tasks.md
openspec/changes/archive/2026-07-03-slice-4-display-and-visual/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-03-slice-5-weather/: tasks.md
openspec/changes/archive/2026-07-04-slice-6-calendar-and-holidays/: proposal.md  tasks.md
openspec/changes/archive/2026-07-06-slice-7-media-player/: proposal.md  tasks.md
openspec/changes/slice-0-architecture-skeleton/: design.md  tasks.md
openspec/changes/slice-0-architecture-skeleton/specs/mopidy-client/: spec.md
openspec/changes/slice-1-alarm-scheduling-and-episode/: apply-groups.tsv  design.md  proposal.md  tasks.md
openspec/changes/slice-1-alarm-scheduling-and-episode/specs/alarm-scheduling/: spec.md
openspec/changes/slice-1-alarm-scheduling-and-episode/specs/persistence/: spec.md
openspec/changes/slice-1-alarm-scheduling-and-episode/specs/process-runtime/: spec.md
openspec/changes/slice-2-advanced-alarm-features/: tasks.md
openspec/changes/slice-3-panels-theming-liveclock/: proposal.md  tasks.md
openspec/changes/slice-3-panels-theming-liveclock/specs/theming/: spec.md
openspec/changes/slice-4-display-and-visual/: tasks.md
openspec/changes/slice-4a-alarm-prd-alignment/: design.md  proposal.md  tasks.md
openspec/changes/slice-5-weather/: design.md  proposal.md  tasks.md
openspec/changes/slice-6-calendar-and-holidays/: design.md  tasks.md
openspec/changes/slice-7-media-player/: design.md  tasks.md
openspec/changes/slice-8-web-config/: design.md  proposal.md  tasks.md
openspec/specs/alarm-episode/: spec.md
openspec/specs/alarm-scheduling/: spec.md
openspec/specs/calendar/: spec.md
openspec/specs/display-policy/: spec.md
openspec/specs/media-player/: spec.md
openspec/specs/mopidy-client/: spec.md
openspec/specs/mopidy-playback/: spec.md
openspec/specs/persistence/: spec.md
openspec/specs/process-runtime/: spec.md
openspec/specs/theming/: spec.md
openspec/specs/ui-shell/: spec.md
openspec/specs/visual-alarm/: spec.md
openspec/specs/weather/: spec.md
scripts/: live_calendar_check.py
(+25 files in other folders)
