[workspace]
members = ["alarm-clock", "mopidy-client"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = "1.17"
slint-build = "1.17"
thiserror = "2"
tokio = "1"
tokio-tungstenite = "0.27"
toml = "0.8"
tracing = "0.1"
tracing-journald = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
