[package]
name = "alarm-clock"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
mopidy-client = { path = "../mopidy-client" }
rrule.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }
toml.workspace = true
tracing.workspace = true
tracing-journald.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
slint-build = "1.17"
