[package]
name = "alarm-clock"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
mopidy-client = { path = "../mopidy-client" }
qrcode = "0.14"
reqwest = { version = "0.11", features = ["json"] }
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
rrule.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
slint = { workspace = true, features = ["backend-linuxkms-noseat"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["signal"] }
toml.workspace = true
tracing.workspace = true
tracing-journald.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
slint-build = "1.17"

[dev-dependencies]
i-slint-backend-testing = "1.17"
