[package]
name = "mopidy-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
fastrand = "2"
futures = { version = "0.3", default-features = false, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
